<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.fantasmaplasma.sudokusolver.ViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintTop_toTopOf="parent"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-1475221072762577/4868239211">
        </com.google.android.gms.ads.AdView>

        <com.fantasmaplasma.sudokusolver.SudokuBoardView
            android:id="@+id/game_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="7dp"
            app:layout_constraintBottom_toTopOf="@id/numbers_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/adView"/>

        <LinearLayout
            android:id="@+id/mistake_management_layout"
            android:layout_width="50dp"
            android:layout_height="0dp"
            android:layout_marginStart="6dp"
            android:layout_marginBottom="6dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/numbers_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/numbers_layout"
            android:layout_marginLeft="6dp">

            <ImageButton
                android:id="@+id/undo_btn"
                style="@style/numberButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/btn_circle"
                android:onClick="@{() -> viewModel.undo()}"
                android:src="@drawable/ic_undo_selector"
                android:text="@string/_1"
                android:contentDescription="@string/undo_button" />

            <ImageButton
                android:id="@+id/redo_btn"
                style="@style/numberButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/btn_circle"
                android:onClick="@{() -> viewModel.redo()}"
                android:src="@drawable/ic_redo_selector"
                android:text="@string/_1"
                android:contentDescription="@string/redo_button" />

            <ImageButton
                android:id="@+id/delete_btn"
                style="@style/numberButton"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/btn_circle"
                android:onClick="@{() -> viewModel.delete()}"
                android:src="@drawable/ic_delete_selector"
                android:text="@string/_1"
                android:contentDescription="@string/delete_button" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/numbers_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginBottom="6dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/solve_btn_layout"
            app:layout_constraintStart_toEndOf="@id/mistake_management_layout"
            app:layout_constraintTop_toBottomOf="@id/game_layout">

            <LinearLayout
                android:id="@+id/numbers_row_1_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/number_btn_1"
                    style="@style/numberButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="@{() -> viewModel.handleInput(1)}"
                    android:text="@string/_1" />

                <Button
                    android:id="@+id/number_btn_2"
                    style="@style/numberButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="@{() -> viewModel.handleInput(2)}"
                    android:text="@string/_2" />

                <Button
                    android:id="@+id/number_btn_3"
                    style="@style/numberButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="@{() -> viewModel.handleInput(3)}"
                    android:text="@string/_3" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/numbers_row_2_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/number_btn_4"
                    style="@style/numberButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="@{() -> viewModel.handleInput(4)}"
                    android:text="@string/_4" />

                <Button
                    android:id="@+id/number_btn_5"
                    style="@style/numberButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="@{() -> viewModel.handleInput(5)}"
                    android:text="@string/_5" />

                <Button
                    android:id="@+id/number_btn_6"
                    style="@style/numberButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="@{() -> viewModel.handleInput(6)}"
                    android:text="@string/_6" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/numbers_row_3_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/number_btn_7"
                    style="@style/numberButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="@{() -> viewModel.handleInput(7)}"
                    android:text="@string/_7" />

                <Button
                    android:id="@+id/number_btn_8"
                    style="@style/numberButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="@{() -> viewModel.handleInput(8)}"
                    android:text="@string/_8" />

                <Button
                    android:id="@+id/number_btn_9"
                    style="@style/numberButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="@{() -> viewModel.handleInput(9)}"
                    android:text="@string/_9" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/solve_btn_layout"
            android:layout_width="50dp"
            android:layout_height="0dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="6dp"
            android:orientation="vertical"
            android:background="@drawable/btn_number"
            android:gravity="center"
            android:onClick="@{() -> viewModel.solveBoard()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/numbers_layout"
            android:layout_marginRight="6dp">

            <ImageView
                android:id="@+id/notes_btn_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_hint"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/notes_btn_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:gravity="center"
                app:autoSizeMaxTextSize="16sp"
                app:autoSizeMinTextSize="6sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"
                android:text="@string/solve"/>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>